--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container">
       <div class="header_body">
         <a href="index.html"><img class="logo2" src="images/logo3.png"></a>
+        <p class="header-book">Bookовель House</p>
         <div class="header_burger">
           <span></span>
         </div>
@@ -141,6 +142,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10604.051320505147!2d24.38346724726645!3d48.360277117868016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4737180d6338eb0d%3A0xa2144b1805bc8b4!2z0JHRg9C60L7QstC10LvRjCwg0JjQstCw0L3Qvi3QpNGA0LDQvdC60L7QstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1sru!2sua!4v1671652665584!5m2!1sru!2sua" width="1300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="bottom-banner">
     <div class="social">
